# toy-bank-register

./: .env  README.md  api_client.py  app.py  pyproject.toml  secret.ini  test_app.py
templates/: base.html  create_bank.html  edit_bank.html  index.html  view_bank.html
