[project]
name = "validata-bank-register"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "pandas>=2.3.3",
    "pyodbc>=5.3.0",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
